--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ repositories {
 }
 
 dependencies {
+
+	implementation project(':src:api')
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'com.mysql:mysql-connector-j'
