--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
+##########################################################
+## Configurações do Spring Boot
+##########################################################
 spring.application.name=person
+server.port=8182
 
+##########################################################
+## Configurações do Banco de Dados MySQL
+##########################################################
 #spring.datasource.url=jdbc:mysql://192.168.3.1:3306/seu_banco?useSSL=false&serverTimezone=UTC
 spring.datasource.url=jdbc:mysql://192.168.3.1:3306/javaperson?useSSL=false
 spring.datasource.username=root
@@ -9,3 +16,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+
+##########################################################
+## COnfigurações da Aplicação
+##########################################################
